<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_vehicle_positions">

    <fragment
        android:id="@+id/nav_vehicle_positions"
        android:name="com.example.geofleet.ui.vehicles.VehiclePositionsFragment"
        android:label="@string/vehicle_positions_map"
        tools:layout="@layout/fragment_vehicle_positions" />

    <fragment
        android:id="@+id/nav_fleet"
        android:name="com.example.geofleet.ui.fleet.FleetFragment"
        android:label="@string/fleet" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.geofleet.ui.profile.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/vehicleProfileFragment"
        android:name="com.example.geofleet.ui.vehicles.VehicleProfileFragment"
        android:label="@string/vehicle_profile"
        tools:layout="@layout/fragment_vehicle_profile">
        <argument
            android:name="vehicleId"
            app:argType="string" />
    </fragment>

    <action
        android:id="@+id/action_fleetFragment_to_vehicleProfileFragment"
        app:destination="@id/vehicleProfileFragment" />

</navigation> 
